ar for services

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -55,6 +55,20 @@
     "Retour à la liste des chambres" : "العودة إلى قائمة الغرف",
 
 
+    "NOS SERVICES" : "خدماتنا",
+    "DES CHAMBRES ENTIÈREMENT ÉQUIPÉE, DE DIFFÉRENTS SERVICES A EN BÉNÉFICIER" : "غرف مجهزة بالكامل ، خدمات مختلفة للاستفادة منها",
+    "Ménage" : "التنظيف",
+    "Blanchisserie" : "مغسلة",
+    "Service de chambre" : "خدمة الغرف",
+    "Bagagerie" : "خدمة الأمتعة", 
+    "Wi-Fi Disponible" : "واي فاي متاح",
+    "La connexion WiFi est disponible dans toutes les chambres, ainsi que dans les espaces communs tels que le hall et le restaurant ." : ".وأي فأي متاح في جميع الغرف ، وكذلك في المناطق المشتركة مثل اللوبي والمطعم",
+    "Notre personnels veille à ce que toutes les chambres soient propres avant votre arrivée , ce qui les poussent à bien nettoyer la chambre tous les jours." : ".يضمن موظفونا نظافة جميع الغرف قبل وصولك ، مما يشجعهم على تنظيف الغرفة جيدًا كل يوم",
+    "Lors de votre séjour , notre personnel s'occupe du lavage , séchage et même repassage des vêtements." : ".أثناء إقامتك ، يعتني موظفونا بغسل وتجفيف وحتى كي الملابس",
+    "Votre petit déjeuner arrive chez vous dès le matin , il vous suffit juste de demander." : ".يصل إفطارك إلى باب منزلك في الصباح ، عليك فقط أن تسأل",
+    "Votre confort est notre joie , Lors de votre séjour ne pensez pas à votre bagage , nous nous occupons de tous , pensez à votre confort." : ".راحتك هي فرحتنا ، أثناء إقامتك لا تفكر في أمتعتك ، فنحن نعتني بكل شيء ، نفكر في راحتك",
+
+
 
     "Liens Rapides" : "روابط سريعة",
     "Liens Supplémentaires" : "روابط إضافية",
