--- a/lang/ar.json
+++ b/lang/ar.json
@@ -69,6 +69,16 @@
     "Votre confort est notre joie , Lors de votre séjour ne pensez pas à votre bagage , nous nous occupons de tous , pensez à votre confort." : ".راحتك هي فرحتنا ، أثناء إقامتك لا تفكر في أمتعتك ، فنحن نعتني بكل شيء ، نفكر في راحتك",
 
 
+    "CONTACTEZ-NOUS" : "اتصل بنا",
+    "Si vous avez des questions , n'hésitez pas de nous contacter si-dessous et nous vous répondrons le plus tôt possible." : ".إذا كانت لديك أي أسئلة ، فلا تتردد في الاتصال بنا أدناه وسنقوم بالرد عليك في أقرب وقت ممكن",
+    "Nom": "اسم",
+    "Message":"رسالة",
+    "ENVOYER" : "أرسل",
+    "Général" : "عام",
+    "Maroc" : "Morocco",
+    "Média" : "وسائط",
+    "Téléphone" : "هاتف",
+
 
     "Liens Rapides" : "روابط سريعة",
     "Liens Supplémentaires" : "روابط إضافية",
