ar for comments

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -79,6 +79,19 @@
     "Média" : "وسائط",
     "Téléphone" : "هاتف",
 
+    "Donnez votre avis" : "مشاركة رأيك",
+    "Avis" : "رأي",
+    "Soumettre" : "يرسل",
+    "Nous attendons vos avis" : "نحن ننتظر ارائكم",
+    "COMMENTAIRES" : "تعليقات",
+    "Détails" : "تفاصيل",
+    "Aucun commentaire trouvé." : ".لا توجد تعليقات",
+    "Voir les ratings" : "انظر التصنيفات",
+    "Retour" : "خلف",
+    "Note" : "درجة",
+    "Date" : "تاريخ",
+
+
 
     "Liens Rapides" : "روابط سريعة",
     "Liens Supplémentaires" : "روابط إضافية",
