--- a/lang/ar.json
+++ b/lang/ar.json
@@ -92,6 +92,30 @@
     "Date" : "تاريخ",
 
 
+    "LE BON CHOIX" : "الاختيار الجيد",
+    "Faites votre réservation , dans la chambre qui vous plait à la date qui vous convient." : ".قم بالحجز في الغرفة التي تفضلها في التاريخ الذي يناسبك",
+    "Bon séjour" : "اقامة طيبة",
+    "Chambre" : "غرفة",
+    "Date d'arrivée" : "تاريخ الوصول",
+    "Date de départ" : "تاريخ المغادرة",
+    "Nombre de personnes" : "عدد الأشخاص",
+    "Adresse e-mail" : "البريد الإلكتروني",
+    "Carte de crédit" : "بطاقة إئتمان",
+    "Annuler" : "إلغاء",
+    "OFFRES EXCLUSIVES" : "عروض حصرية",
+    "Bénéficier de nos offres" : "Take advantage of our offers",
+    "Grand lit,salle de bain , petit déjeuner inclut , wifi et services" : "سرير مزدوج ، حمام ، الإفطار شامل ، خدمة الاتصال اللاسلكي بالإنترنت عبر تقنية واي فاي",
+    "À partir de" : "ابتداء من",
+    "nuit" : "ليلة",
+    "Voir la disponibilité" : "انظر التوفر",
+    "Deux lits twin ,salle de bain , petit déjeuner inclut , wifi et services" : "سريرين مفردين وحمام ووجبة إفطار شاملة وواي فاي وخدمات",
+    "Trois lits simples ,salle de bain , petit déjeuner inclut , wifi et services" : "ثلاثة أسرة مفردة ، حمام ، الإفطار شامل ، خدمة الاتصال اللاسلكي بالإنترنت عبر تقنية واي فاي والخدمات",
+    "Grand lit et deux lits twin ,salle de bain , petit déjeuner inclut , wifi et services" : "سرير مزدوج واحد ، سريرين مزدوجين ، حمام ، إفطار شامل ، واي فاي وخدمات",
+    "Grand lit ,salle de bain , petit salon, petit déjeuner inclut , wifi et services " : "سرير مزدوج ، حمام ، غرفة معيشة صغيرة ، شامل الإفطار ، واي فاي والخدمات",
+    "Deux chambres , une avec un grand lit et l'autre avec deux lits twin , salle de bain , salon , cuisine , petit déjeuner inclut , wifi et services " :"غرفتا نوم ، إحداهما بسرير مزدوج والأخرى بسريرين فرديين ، وحمام ، وغرفة معيشة ، ومطبخ ، ووجبة إفطار شاملة ، وواي فاي ، والخدمات",
+
+
+
 
     "Liens Rapides" : "روابط سريعة",
     "Liens Supplémentaires" : "روابط إضافية",
