--- a/lang/ar.json
+++ b/lang/ar.json
@@ -164,7 +164,42 @@
 "Cabo Negro Beach":"شاطئ كابو نيغرو",
 "Marina Smir Beach":"مارينا سمير بيتش",
 "Martil Beach":"شاطئ مرتيل",
-
+"Check rates":"معدلات الاختيار",
+"Menu":"القائمة",
+"Fax":"فاكس",
+"2 Adultes":"2 الكبار",
+"Notre sélection de chambres et suites":"اختيارنا للغرف والأجنحة: ",
+"Visiter les chambres":"قم بزيارة الغرف",
+"Chambre Double":"غرفة مزدوجة",
+"Vue: vue sur la mer et la ville , Localization: de 1ere au 3eme etage , Baignoire et douche dans toutes les chambres":"الإطلالة: إطلالة على البحر والمدينة ، الموقع: من الطابق الأول إلى الثالث ، بانيو ودش في جميع الغرف",
+"Chambre Simple":"غرفة بسيطة",
+"Chambre Triple":"غرفة ثلاثية",
+"Chambre Familiale":"غرفة العائلة",
+"Chambre Quadruple":"غرفة رباعية",
+"Suite":"جناح",
+"Appartement":"شقة",
+"Nos clients donnent leur avis":"عملاؤنا يبدون رأيهم",
+"CLIENT DEPUIS MAI 2018, ULTIMATE":"العميل منذ مايو 2018 ، في نهاية المطاف",
+"Également dans la Collection des offres":"أيضا في مجموعة العروض",
+"lits simples":"أسرة فردية",
+"Balcon /Climatisation":"بلكونة / تكييف",
+"Salle de bains privative dans l'hébergement":"حمام خاص في السكن",
+"Télévision à écran plat Terrasse":"تلفزيون بشاشة مسطحة",
+"Wi-Fi Gratuit":"واى فاى مجانى",
+"A partir de":"ابتداء من",
+"par nuit":"في الليلة",
+"Réserver " :"للحجز",
+"Voir la disponibilité":"انظر التوافر",
+"Chambre Double Standard":"غرفة قياسية مزدوجة",
+"2 lits simples":"2 سرير فردي",
+"10 m²Balcon /Climatisation":" 10 متر مربع شرفة / تكييف",
+"Localisation d'hôtel Cote d'or à M'diq, Maroc":"موقع الفندق كوت دور في المضيق ، المغرب",
+"Voir sur Google Maps":"عرض على خرائط جوجل",
+"Maroc se trouve dans la ville de M'diq, Maroc":"يقع المغرب في مدينة المضيق بالمغرب",
+"AV Casablanca lot n°90 mdiq, 93200 M'diq, Maroc":"شارع الدار البيضاء رقم 90 ، 93200 المضيق ، المغرب",
+"ar":"ع",
+"fr":"ف",
+"en":"ان",
     "(and :count more error)": "(و :count خطأ إضافي)",
     "(and :count more errors)": "(و :count أخطاء إضافية)",
     "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى عنوان البريد الإلكتروني الذي قمت بالتسجيل به.",
