--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,25 @@
 {
 
+    "Total":"Total",
     
+
+    "Détails de réservations":"Reservation's details",
+    "Paiement":"Payment",
+    "Prix":"Price",
+    "Formulaire de paiement":"Payment Form",
+    "Carte de crédit ou débit":"Credit or Debit Card",
+    "Confirmer":"Confirm",
+
+    "Nous sommes ravis de vous accueillir prochainement ! Votre réservation a bien été enregistrée et nous sommes impatients de vous offrir une expérience inoubliable.Nous vous recommandons vivement de sauvegarder la facture dès que possible  pour éviter tout problème ultérieur, Bon séjour":"We are delighted to welcome you soon! Your reservation has been successfully registered and we look forward to providing you with an unforgettable experience. We strongly recommend that you save the invoice as soon as possible to avoid any future problems, Have a nice stay    ",
+    "Bienvenue Chez Cote d'or":"Welcome in Cote D'or",
+    "Facture de Réservation":"Reservation Invoice",
+    "Informations Personnelles":"Personal Informations",
+    "Informations de l'Hotel":"Hotel informations",
+    "Type de chambre":"Room Type",
+    "Prix par nuit":"Price per night",
+    "Nombre de nuits":"Nights",
+    "Télécharger la Facture":"Download invoice",
+
     "Mes infos":"My informations",
     "Mon Espace Client":"My space",
     "Bienvenue sur votre espace client":"Welcome to your space",
@@ -29,6 +48,7 @@
     "Administrateur": "Admin",
     "Tél":"Phone",
     "Se connecter":"Sign in",
+
 
     
     "Localisation d'hôtel Cote d'or à M'diq, Maroc":"Hotel Location Cote D'or In M'diq, Morocco",
