--- a/lang/ar.json
+++ b/lang/ar.json
@@ -23,7 +23,7 @@
     "Total":"المجموع",
     "Sinscrire en tant que Client":"سجل كزبون    ",
     "Rechercher":"بحث",
-    "Espace client":"",
+    "Espace client":"فضاء الزبون    ",
     
     "Choisissez votre sexe":"اختيار جنسك    ",
     "Femme":"امراة    ",
